modified settings and base.html

--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -15,7 +15,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 
-    <link rel="icon" type="image/png" sizes="100X100" href="{% static 'portfolio/logo_2.png' %}">
+    <link rel="icon" type="image/jpg" sizes="100X100" href="{% static 'portfolio/logo_2.png' %}">
 
     <title>Vadim Dmitrichev</title>
 </head>
