--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -12,11 +12,11 @@
 
 <div class="row justify-content-center mb-3">
     <div class="col-md-9 text-center">
-        <h1 id="hometext" style="font-size:50px" class="font-weight-bold" >Junior Backend developer</h1>
+        <h1 id="hometext" style="font-size:50px" class="font-weight-bold">Junior Backend developer</h1>
     </div>
 </div>
 
-<h2 class="mt-5">Portfolio</h2>
+<h2 class="mt-5">Projects</h2>
 <hr>
 <div class="row">
     {% for project in projects %}
@@ -24,14 +24,35 @@
 
         {% if project.url %}
         <a href="{{ project.url }}" target="_blank">
-            <img src="{{ project.image.url }}" class="img-thumbnail mb-2">
+            <img src="{{ project.image.url }}" class="img-thumbnail mb-2 mx-auto d-block" style="max-width: 100%; height: 200px">
         </a>
         {% else %}
 
-        <img src="{{ project.image.url }}" class="img-thumbnail mb-2">
+        <img src="{{ project.image.url }}" class="img-thumbnail mb-2 mx-auto d-block" style="max-width: 100%; height: 200px">
         {% endif %}
-        <h3>{{ project.title }}</h3>
-        <p>{{ project.description }}</p>
+        <h3 class="text-center">{{ project.title }}</h3>
+        <p class="text-center">{{ project.description }}</p>
+
+    </div>
+    {% endfor %}
+</div>
+
+<h2 class="mt-5">Studying</h2>
+<hr>
+<div class="row">
+    {% for item in theory %}
+    <div class="col-lg-4 col-md-6">
+
+        <img src="{{ item.image.url }}" class="img-thumbnail mb-2 mx-auto d-block" style="max-width: 100%; height: 200px">
+        <div>
+            <div class="text-center">
+                <h3>{{ item.title }}</h3>
+                <p>{{ item.description }}</p>
+                {% if item.url %}
+                <a class="btn btn-primary mb-3" href="{{ item.url }}" role="button">My Notes</a>
+            </div>
+            {% endif %}
+        </div>
 
     </div>
     {% endfor %}
