--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -21,18 +21,26 @@
 <div class="row">
     {% for project in projects %}
     <div class="col-lg-4 col-md-6">
-
         {% if project.url %}
         <a href="{{ project.url }}" target="_blank">
-            <img src="{{ project.image.url }}" class="img-thumbnail mb-2 mx-auto d-block" style="max-width: 100%; height: 200px">
+            <img src="{{ project.image.url }}" class="img-thumbnail mb-2 mx-auto d-block"
+                 style="max-width: 100%; height: 200px">
         </a>
         {% else %}
 
-        <img src="{{ project.image.url }}" class="img-thumbnail mb-2 mx-auto d-block" style="max-width: 100%; height: 200px">
+        <img src="{{ project.image.url }}" class="img-thumbnail mb-2 mx-auto d-block"
+             style="max-width: 100%; height: 200px">
         {% endif %}
-        <h3 class="text-center">{{ project.title }}</h3>
-        <p class="text-center">{{ project.description }}</p>
-
+        <div class="text-center">
+            <h3>{{ project.title }}</h3>
+            <p>{{ project.description }}</p>
+            <a class="btn btn-dark mb-3" href="{{ project.github_url }}" role="button" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                     class="bi bi-code-slash" viewBox="0 0 16 16">
+                    <path d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294l4-13zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0z"/>
+                </svg>
+                Code</a>
+        </div>
     </div>
     {% endfor %}
 </div>
@@ -42,18 +50,17 @@
 <div class="row">
     {% for item in theory %}
     <div class="col-lg-4 col-md-6">
-
-        <img src="{{ item.image.url }}" class="img-thumbnail mb-2 mx-auto d-block" style="max-width: 100%; height: 200px">
+        <img src="{{ item.image.url }}" class="img-thumbnail mb-2 mx-auto d-block"
+             style="max-width: 100%; height: 200px">
         <div>
             <div class="text-center">
                 <h3>{{ item.title }}</h3>
                 <p>{{ item.description }}</p>
                 {% if item.url %}
-                <a class="btn btn-primary mb-3" href="{{ item.url }}" role="button">My Notes</a>
+                <a class="btn btn-primary mb-3" href="{{ item.url }}" role="button" target="_blank">My Notes</a>
             </div>
             {% endif %}
         </div>
-
     </div>
     {% endfor %}
 </div>
