--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse text-center" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% static 'portfolio/resume.pdf' %}" target="_blank">Resume</a>
+                    <a class="nav-link" href="{% static 'portfolio/resume_dmitrichev_vadim.pdf' %}" target="_blank">Resume</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://github.com/VadimDmitrichev" target="_blank">GitHub</a>
