--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -12,7 +12,7 @@
 
 <div class="row justify-content-center mb-3">
     <div class="col-md-9 text-center">
-        <h1 id="hometext" style="font-size:50px" class="font-weight-bold">Junior Backend developer</h1>
+        <h1 id="hometext" style="font-size:50px" class="font-weight-bold mt-3">Backend developer</h1>
     </div>
 </div>
 
